# nexapex-landing

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  astro.config.mjs  docker-compose.yml  nginx.conf  package-lock.json  package.json
.gemini/: GEMINI.md
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_approval_and_seed_admin.py
backend/app/: config.py  dependencies.py  main.py
backend/app/admin/: router.py  schemas.py
backend/app/auth/: jwt.py  router.py  schemas.py  service.py
backend/app/chat/: router.py  schemas.py  service.py
backend/app/db/: database.py  models.py
backend/app/vision/: router.py  schemas.py  service.py
backend/data/: nexapex-train.jsonl
backend/scripts/: build_persona_dataset.py  validate_persona_dataset.py
components/: Footer.tsx  HeroSection.tsx  Navbar.tsx
docs/: nexapex_ai_studio_PRD.md
docs/plans/: 2026-03-03-astro-migration-design.md  2026-03-03-cinematic-scroll-hero-design.md  2026-03-03-loading-flow-fix.md  2026-03-07-design-enhancement-plan.md  2026-03-07-intelligent-ops-dashboard-prompt.md  2026-03-09-scroll-normalization.md  2026-03-23-rebranding-orchestration-design.md  2026-03-25-immersive-3d-scroll.md  2026-03-25-landing-page-design.md  2026-03-26-hero-3d-fix-and-loader.md  2026-04-03-scroll-smoother-pause-design.md  2026-04-03-scroll-smoother-pause-plan.md  2026-04-06-ai-studio-v3-design.md  2026-04-06-ai-studio-v3-plan.md  (+13 more)
public/: robots.txt
(+109 files in other folders)
