[project]
name = "nexapex-studio-api"
version = "0.1.0"
description = "NexApex AI Studio inference API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "slowapi>=0.1.9",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.3.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
    "google-generativeai>=0.8.0",
    "opencv-python-headless>=4.10.0",
]
local-llm = [
    "llama-cpp-python>=0.3.0",
]
email = [
    "resend>=2.5.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
